<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/menu_statistics" />
        
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/ic_inventory"
            android:title="@string/menu_inventory" />
        
        <item
            android:id="@+id/nav_sales"
            android:icon="@drawable/ic_sales"
            android:title="@string/menu_sales" />
        
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_category"
            android:title="@string/menu_categories" />
        
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_promotion"
            android:title="@string/menu_promotions" />
    </group>
    
    <item android:title="Otros">
        <menu>
            <item
                android:id="@+id/nav_backup"
                android:icon="@android:drawable/ic_menu_save"
                android:title="Backup y Restore" />
                
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
        </menu>
    </item>
</menu>
